# Aurora_ws

./: .gitignore  README.md
src/TCP_pkg/: CMakeLists.txt  package.xml
src/TCP_pkg/src/: TCP_pkg_client_node.cpp  TCP_pkg_client_pkg_node.cpp  TCP_pkg_server_node.cpp  TCP_pkg_server_pkg_node.cpp
src/UDP_pkg/: CMakeLists.txt  package.xml
src/UDP_pkg/include/udp_pkg/: udp_protocol.h
src/UDP_pkg/src/: udp_pkg_client_node.cpp  udp_pkg_server_node.cpp
src/control_all_system_pkg/src/: control_all_system_pkg_node.cpp
src/control_camera_pkg/: CMakeLists.txt  package.xml
src/control_camera_pkg/src/: control_camera_pkg_node.cpp
src/control_telega_pkg/: CMakeLists.txt  package.xml
src/control_telega_pkg/src/: control_telega_pkg_node.cpp
src/rover_launch/: CMakeLists.txt  package.xml
src/rover_launch/launch/: launch.py
src/video_camera_pkg/: CMakeLists.txt  package.xml
src/video_camera_pkg/src/: video_camera_pkg_node.cpp
