<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_launch</name>
  <version>0.0.0</version>
  <description>Launch files for rover system</description>
  <maintainer email="maxim-prosin@todo.todo">maxim-prosin</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>video_camera_pkg</exec_depend>
  <exec_depend>udp_pkg</exec_depend>
  <exec_depend>TCP_pkg</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>